break native functions out even more
not sure if this is the right direction, but it works for now

--- a/CmakeLists.txt
+++ b/CmakeLists.txt
@@ -13,5 +13,7 @@ add_executable(lux
     scanner.c
     object.c
     table.c
-    native.c
+    native/system.c
+    native/math.c
+    native/native.c
 )
