--- a/CmakeLists.txt
+++ b/CmakeLists.txt
@@ -22,6 +22,7 @@ add_executable(phelt
     src/native/file.c
     src/native/http.c
     src/native/array.c
+    src/native/table.c
     src/native/native.c
 )
 
