--- a/CmakeLists.txt
+++ b/CmakeLists.txt
@@ -29,4 +29,4 @@ add_executable(phelt
 )
 
 target_link_libraries(phelt curl)
-target_compile_options(phelt PRIVATE -Wall -Wextra -Wpedantic -Werror -Wno-gnu-label-as-value -Wno-gnu-zero-variadic-macro-arguments)
+target_compile_options(phelt PRIVATE -Wall -Wextra -Wpedantic -Werror -Wno-gnu-label-as-value -Wno-gnu-zero-variadic-macro-arguments -Wno-gnu-case-range)
